[package]
name = "ruff-api"
version = "0.1.1"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ruff_api"
crate-type = ["cdylib"]

[dependencies]
pyo3 = {version = "*", features = ["extension-module", "abi3-py39"]}

anstyle = "1.0.13"
glob = "0.3.3"

ruff_formatter = { git = "https://github.com/astral-sh/ruff.git", tag = "0.14.5", package = "ruff_formatter" }
ruff_linter = { git = "https://github.com/astral-sh/ruff.git", tag = "0.14.5", package = "ruff_linter" }
ruff_python_ast = { git = "https://github.com/astral-sh/ruff.git", tag = "0.14.5", package = "ruff_python_ast" }
ruff_python_formatter = { git = "https://github.com/astral-sh/ruff.git", tag = "0.14.5", package = "ruff_python_formatter" }
